# noir-libs

./: .gitignore  Cargo.toml  Nargo.toml  README.md  config.toml  download_noir_libs_cli.sh  install.sh
.github/workflows/: _build-release.yml  _check-release.yml  release.yml
noir-libs/: Cargo.toml
noir-libs/src/: config.rs  filesystem.rs  lib.rs  main.rs  manifest.rs  network.rs  path.rs  tar.rs
noir-libs/src/api/: api.rs  mod.rs  network.rs
noir-libs/src/ops/: add.rs  fetch.rs  mod.rs  package.rs  publish.rs  yank.rs
noir-libs/src/ops/package/: mod.rs  name_validator.rs  package.rs  tar.rs
noir-libs/tests/test_files/test_noir_package/: .gitignore  Nargo.toml  file_to_be_packaged.txt
src/: config.rs  filesystem.rs  lib.rs  main.rs  manifest.rs  network.rs  ops.rs  path.rs  version.rs
src/ops/: add.rs  remove.rs
tests/test_files/: packages  test_package-1.2.3
xtask/: Cargo.toml
xtask/src/: create_archive.rs  main.rs
