[package]
name = "noir-libs"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
camino = { version = "1", features = ["serde1"] }
clap = { version = "4.5.23", features = ["derive"] }
config = { version = "0.15.4", features = ["toml"] }
curl = "0.4.46"
directories = "5"
flate2 = { version = "1.0.30", default-features = false, features = ["zlib"] }
fs4 = { version = "0.7", features = ["tokio"] }
mockito = "1.6.1"
once_cell = "1"
pathdiff = "0.2.3"
reqwest = { version = "0.11", features = ["blocking", "json"] }
tar = { version = "0.4.42", default-features = false }
tempfile = "3.14.0"
tokio = { version = "1", features = ["macros", "io-util", "process", "rt", "rt-multi-thread", "sync"] }
toml_edit = "0.22.22"
tracing = "0.1"
which = "5"
serde = { version = "1.0", features = ["derive"] }
