[package]
name = "noir-libs"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.23", features = ["derive"] }
config = { version = "0.15.4", features = ["toml"] }
curl = "0.4.46"
directories = "5"
flate2 = { version = "1.0.30", default-features = false, features = ["zlib"] }
mockito = "1.6.1"
pathdiff = "0.2.3"
reqwest = { version = "0.11", features = ["blocking", "json"] }
tar = { version = "0.4.42", default-features = false }
tempfile = "3.14.0"
tokio = { version = "1", features = ["macros", "io-util", "process", "rt", "rt-multi-thread", "sync"] }
toml_edit = "0.22.22"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.134"
