[workspace]
members = [
    "noir-libs",
    "xtask"
]

[workspace.dependencies]
anyhow = "1"
camino = { version = "1", features = ["serde1"] }
clap = { version = "4.5.23", features = ["derive", "env", "string"] }
config = { version = "0.15.4", features = ["toml"] }
directories = "5"
flate2 = { version = "1.0.30", default-features = false, features = ["zlib"] }
fs4 = { version = "0.7", features = ["tokio"] }
mockito = "1.6.1"
once_cell = "1"
pathdiff = "0.2.3"
reqwest = { version = "0.11", features = ["blocking", "json", "rustls-tls"], default-features = false } # Use rustls-tls to avoid native-tls
tar = { version = "0.4.42", default-features = false }
tempfile = "3.14.0"
tokio = { version = "1", features = ["macros", "io-util", "process", "rt", "rt-multi-thread", "sync"] }
toml_edit = "0.22.22"
tracing = "0.1"
which = "5"
serde = { version = "1.0", features = ["derive"] }
semver = "1.0.24"
serde_json = "1.0.1"
time = "0.3.37"
walkdir = "2.5.0"
xshell = "0.2.7"
colored = "3.0.0"
toml = "0.8.19"
ignore = "0.4.23"
indoc = "2.0.5"
