[package]
name = "noir-libs"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
anyhow.workspace = true
camino.workspace = true
clap.workspace = true
config.workspace = true
directories.workspace = true
flate2.workspace = true
fs4.workspace = true
mockito.workspace = true
once_cell.workspace = true
pathdiff.workspace = true
reqwest.workspace = true
tar.workspace = true
tempfile.workspace = true
tokio.workspace = true
toml_edit.workspace = true
tracing.workspace = true
which.workspace = true
serde.workspace = true
semver.workspace = true
serde_json.workspace = true
time.workspace = true
walkdir.workspace = true
xshell.workspace = true
